kubernetes/apps/gitops/tofu-controller/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tofu-controller
spec:
  description: "Network policy for Tofu Controller"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tofu-controller
  ingress:
    # Allow same namespace traffic
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: flux-system
    # Allow webhook from kube-apiserver
    - fromEntities:
        - kube-apiserver
  egress:
    # Allow same namespace traffic
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: flux-system
    # Allow kube-apiserver access
    - toEntities:
        - kube-apiserver
    # Allow terraform provider downloads and external APIs
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY

    # Allow access to Vault for secrets retrieval
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: vault
            app.kubernetes.io/name: vault
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
    # Allow access to Zitadel
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: zitadel
            app.kubernetes.io/name: zitadel
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    # Allow gRPC to terraform runner pods across the cluster
    - toEntities:
        - cluster
      toPorts:
        - ports:
            - port: "30000"
              protocol: TCP
